--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,13 +1,10 @@
 header {
     background: #ffffff;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
-}
-
-#container {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     display: flex;
     justify-content: space-between;
     align-items: center;
-   padding: 1em 3.5em;
+    padding: 0.8vh 3.5vw;
 }
  
 #logo {
@@ -16,17 +13,16 @@ header {
 }
 
 .userName {
-    font-weight: 500;
-    font-size: 1.4em;
+    font-size: 1.3em;
     color: #000000;
     text-decoration: none;
     transition: all 0.3s ease 0s;
 }
 
 #userIcon {
-    height: 50px;
-    width: 50px;
-    margin-left: 15px;
+    height: 45px;
+    width: 45px;
+    margin-left: 10px;
     background: #000000;
     border-radius: 100%;
     cursor: pointer;
