--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,7 +1,24 @@
 * {
     margin: 0px;
     padding: 0px;
-    font-size: 16px;
     font-family: 'Montserrat', sans-serif;
+}
+
+body {
+    font-size: 1em;
     background: #ffffff;
 }
+
+h1 {
+    font-size: 2.2em;
+    color: #562B82;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
+p {
+    font-size: 1em;
+}
+
