The basic elements is already complement and working well. Today I was working to complete the sidebar popover and make the sidebar work in large screen

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -31,3 +31,9 @@ header {
 .userName:hover {
     color: #562B82;
 }
+
+@media (min-width: 2000px) {
+    header {
+        padding: 0.8vh 2.5vw;
+    }
+}
