Finalizada a lista de produtos da página de produtos, assim como seus botoes.

--- a/src/components/UpperBodyInformation/style.css
+++ b/src/components/UpperBodyInformation/style.css
@@ -4,6 +4,10 @@
     align-items: flex-start;
 }
 
+#upperBodyInfo h1 {
+    color: #562B82;
+}
+
 #buttonSpace {
     display: flex;
     gap: 25px;
