--- a/src/pages/AllProductAndServices/style.css
+++ b/src/pages/AllProductAndServices/style.css
@@ -76,6 +76,7 @@
     vertical-align: middle;
     margin-right: 4px;
     margin-bottom: 3px;
+    cursor: pointer;
 }
 
 .customCheckbox input:checked + label::before {
