--- a/src/components/form/ServiceForm/style.css
+++ b/src/components/form/ServiceForm/style.css
@@ -44,8 +44,12 @@
     flex-direction: row;
 }
 
+.twoElementsArea {
+    width: 49%;
+}
+
 .elementsArea {
-    width: 315px;
+    width: 100% !important;
     border-radius: 0 5px 5px 0 !important;
     padding-left: 10px;
 }
@@ -64,7 +68,7 @@
 
 .dropdowCustom {
     height: 35px;
-    width: 350px;
+    width: 100% !important;
     padding-left: 10px;
     border-radius: 5px;
 }
