Integrei a Service page e agora está sendo realizada a listagem. Além disso, realoquei os formulários de product e service para a pasta de components dentro da pasta de AllProductAndServices.

--- a/src/pages/AllProductAndServices/style.css
+++ b/src/pages/AllProductAndServices/style.css
@@ -53,12 +53,22 @@
     text-align: center;
 }
 
-.iconsCustom {
+.iconsPosition {
     display: flex;
     justify-content: center;
     text-align: center;
+    padding-bottom: 1px;
     gap: 15px;
+}
+
+.iconCustom {
     font-size: 1.2em;
+    color: #000;
+}
+
+.iconCustom:hover {
+    font-size: 1.2em;
+    color: #562B82;
 }
 
 .customCheckbox input {
