Unificando a style.css para todas as modas, além de melhorando algumas características do código das modais de service  e product.

--- a/src/pages/AllProductAndServices/style.css
+++ b/src/pages/AllProductAndServices/style.css
@@ -61,6 +61,15 @@
     gap: 15px;
 }
 
+.iconBtnBackground {
+    background: none !important;
+    border: none !important;
+}
+
+.iconBtnBackground:hover {
+    background: #562B82 !important;
+}
+
 .iconCustom {
     font-size: 1.2em;
     color: #000;
@@ -68,7 +77,6 @@
 
 .iconCustom:hover {
     font-size: 1.2em;
-    color: #562B82;
 }
 
 .customCheckbox input {
