--- a/src/pages/Client/components/ClientLegalForm/style.css
+++ b/src/pages/Client/components/ClientLegalForm/style.css
@@ -1,4 +1,4 @@
-.backgroundStyle {
+.legalClient-backgroundStyle {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -8,7 +8,7 @@
     z-index: 1000;
 }
 
-.modalStyle {
+.legalClient-modalStyle {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -19,41 +19,41 @@
     color: black;
 }
 
-#headerContainer {
+#legalClient-headerContainer {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
     margin-bottom: 10px;
 }
 
-.clientTypeTitle {
+.legalClient-clientTypeTitle {
     color: #562B82;
     margin-left: 25px;
 }
 
-.clientExitIcon {
+.legalClient-clientExitIcon {
     font-size: 1.6em;
     margin-right: 25px;
     cursor: pointer;
 }
 
-#Container {
+#legalClient-Container {
     width: 88%;
     margin-left: auto;
     margin-right: auto; 
 }
 
-.formCustom {
+.legalClient-formCustom {
     text-align: start;
 }
 
-.formCustom label {
+.legalClient-formCustom label {
     font-size: 1.2em;
     margin-bottom: 2.5px;
     cursor: pointer;
 }
 
-.formCustom input {
+.legalClient-formCustom input {
     border: none;
     border: 1px solid gray;
     border-radius: 5px;
@@ -67,49 +67,47 @@ input::placeholder {
     font-size: 0.9em;
 }
 
-.fieldNameLine {
+.legalClient-fieldNameLine {
     width: 100%;
 }
 
-.multipleFields {
+.legalClient-multipleFields {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.standardElementArea {
+.legalClient-standardElementArea {
     width: 49%;
 }
 
-.clientEmailArea {
+.legalClient-clientEmailArea {
     width: 65%;
 }
 
-.clientTelefoneArea {
+.legalClient-clientTelefoneArea {
     width: 33%;
 }
 
-.clientEnderecoArea {
+.legalClient-clientEnderecoArea {
     width: 100%;
 }
  
-.clientFieldArea {
+.legalClient-clientFieldArea {
     width: 100% !important;
     border-radius: 5px !important;
     padding-left: 10px;
     margin-bottom: 10px;
 }
 
-
-
-.buttonPosition {
+.legalClient-buttonPosition {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px 0 30px 0 !important;
 }
 
-.saveButton {
+.legalClient-saveButton {
     height: 35px;
     width: 140px;
     background: #562B82;
