Adicionando o campo de desconto ao expense form.

--- a/src/pages/ExpenseIncome/style/expenseForm.css
+++ b/src/pages/ExpenseIncome/style/expenseForm.css
@@ -117,6 +117,10 @@ input::placeholder {
     width: 32.5%;
 }
 
+.expense-fourElementArea {
+    width: 24%;
+}
+
 .expense-valueContainer {
     display: flex;
 }
