Refatorando codigos na expense modal e retirando o campo tipo da despesa da modal.

--- a/src/pages/ExpenseIncome/style/expenseForm.css
+++ b/src/pages/ExpenseIncome/style/expenseForm.css
@@ -94,6 +94,10 @@ input::placeholder {
     align-items: center;
 }
 
+.expense-onlyElementArea {
+    width: 100%;
+}
+
 .expense-standardElementArea {
     width: 49%;
 }
