--- a/src/pages/Calendar/style.css
+++ b/src/pages/Calendar/style.css
@@ -5,3 +5,11 @@
     margin-left: 125px;
     margin-bottom: 50px;
 }
+
+.calendar-container {
+    padding: 50px 0;
+}
+
+.calendar {
+    width: 100%;
+}
