--- a/src/pages/ExpenseIncome/style.css
+++ b/src/pages/ExpenseIncome/style.css
@@ -75,6 +75,11 @@
     text-align: center;
 }
 
+.dropdown {
+    display: inline-block;
+    position: relative;
+}
+
 .inex-installmentsPosition {
     display: flex;
     justify-content: center;
@@ -86,6 +91,52 @@
     height: 30px;
     border-radius: 10px;
     background-color: #DADADA;
+}
+
+.dropdown-content {
+    margin-top: 2.5px;
+    display: none;
+    position: absolute;
+    left: 110px;
+    top: -50px;
+    width: 200%;
+    background: #F5F5F6;
+    overflow: auto;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+    border-radius: 10px;
+}
+
+.dropdown-title {
+    padding-top: 15px;
+    font-size: 1.1em;
+}
+
+.dropdown-installment-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+.dropdown-installment {
+    background: #fff;
+    border-radius: 5px;
+    width: 85%;
+    height: 30px;
+    text-align: start;
+    box-shadow: 1.5px 2.5px 5px rgb(208, 208, 208);
+    margin-bottom: 5px;
+}
+
+.dropdown-installment-item {
+    padding: 2.5px 0 0 5px;
+    font-size: 1em;
+
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .inex-installmentsContainer p {
